--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#00ccff">p</a>
+									<a href="#00ccff"></a>
 									<ul>
 										<li><a href="#">Lorem ipsum</a></li>
 										<li><a href="#">Magna veroeros</a></li>
@@ -84,15 +84,19 @@
 									<p>Then Your At The Right Place</p>
 								</header>
 								<ul class="actions">
-										<center>
+									<center><section>
 									<li><a href="https://docs.google.com/forms/d/1eAFOmz3T4pMvDJDb-_UfdWdp2JzzTk8A2UYwT0QGzk4" class="button style2 large">Order Intro</a></li>
-								    <center>										 
+								    <center> <section></section>
+
 								<li><a href="https://docs.google.com/forms/d/1FzYLKXEMJKZj1poWMMeIoCuoQtPynDPkEVQvjdGyExo" class="button style1 large">Order Outro</a></li>		
-								<center>	
+								    <center> <section></section>
+
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdeWY5XebqZALC7Kvi4Tfm4YYTHyzaI3dEEWRyEYUmAJMImfA" class="button style2 large">Order Lower Thirds</a></li>
-									<center>
+								    <center> <section></section>
+
 								<li><a href="https://discord.gg/UfepA6G" class="button style1 large">Join Discord Server</a></li>
-							<center>																
+								    <center> <section></section>
+
 						<div id="copyright">
 							<ul>
 								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
